# ruvector

./: Cargo.toml  README.md
.claude/intelligence/data/: feedback.json  patterns.json  sequences.json  trajectories.json
.github/workflows/: agentic-synth-ci.yml  build-native.yml  postgres-extension-ci.yml  sona-napi.yml
crates/router-cli/: Cargo.toml
crates/router-core/src/: storage.rs
crates/router-ffi/: Cargo.toml
crates/router-wasm/: Cargo.toml
crates/ruvector-attention/src/hyperbolic/: mod.rs
crates/ruvector-bench/src/: lib.rs
crates/ruvector-core/benches/: hnsw_search.rs
crates/ruvector-core/src/: agenticdb.rs  quantization.rs  storage.rs
crates/ruvector-core/tests/: advanced_features_integration.rs
crates/ruvector-gnn/src/: training.rs
crates/ruvector-node/: Cargo.toml
crates/ruvector-postgres/: Cargo.toml
crates/ruvector-postgres/benches/: distance_bench.rs  index_bench.rs  quantization_bench.rs  quantized_distance_bench.rs
crates/ruvector-postgres/src/: lib.rs
crates/ruvector-postgres/src/gnn/: gcn.rs  (+2 more)
crates/ruvector-postgres/tests/: integration_distance_tests.rs  learning_integration_tests.rs  parallel_execution_test.rs  pgvector_compatibility_tests.rs  property_based_tests.rs  quantized_types_test.rs  stress_tests.rs  unit_halfvec_tests.rs  unit_vector_tests.rs
crates/ruvector-tiny-dancer-core/: README.md
crates/ruvector-tiny-dancer-core/benches/: feature_engineering.rs  routing_inference.rs
crates/ruvector-tiny-dancer-node/: README.md
crates/ruvector-tiny-dancer-wasm/: README.md
crates/ruvector-wasm/: Cargo.toml
crates/sona/: Cargo.toml  README.md
crates/sona/benches/: sona_bench.rs
crates/sona/src/: engine.rs  ewc.rs  lib.rs  lora.rs  reasoning_bank.rs  trajectory.rs  types.rs  wasm.rs
crates/sona/src/loops/: background.rs  coordinator.rs
crates/sona/src/training/: factory.rs  federated.rs  pipeline.rs
docs/: INDEX.md
docs/tiny-dancer/: DEEP_REVIEW.md
examples/edge/pkg/: README.md  package.json
examples/exo-ai-2025/research/11-conscious-language-interface/: Cargo.toml
examples/exo-ai-2025/research/11-conscious-language-interface/src/: lib.rs  qualia_memory.rs
examples/onnx-embeddings/: Cargo.toml
examples/onnx-embeddings/examples/: semantic_search.rs
examples/onnx-embeddings/src/: embedder.rs  lib.rs  pooling.rs
examples/ruvLLM/: Cargo.toml  README.md
examples/ruvLLM/src/: lib.rs  memory.rs  router.rs
npm/: README.md
npm/core/: package.json
npm/core/src/: index.ts
npm/ruvector/: README.md  package.json
npm/ruvector/types/: index.d.ts
plans/: COMPREHENSIVE_MISSING_FEATURES_ANALYSIS.md  EXECUTIVE_SUMMARY_MISSING_FEATURES.md
plans/claude-flow-v3/: 10-supplementary-missing-features.md  README.md
(+31 files in other folders)
